--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -21,25 +21,21 @@
 	<%= f.text_area :body, class: 'form-control', rows: 10, required:true %>
 </div>
 <div class="checkbox">
-	<label><%= f.check_box :published %> Published</label>
+	<label><%= f.check_box :published %> Publish in announcements</label>
 </div>
 <div class="checkbox">
-	<label><%= check_box_tag :send_mail %> Send an e-mail</label>
+	<label><%= check_box_tag :send_mail %> Send an e-mail with the current text</label>
 </div>
 
 <div class="radio">
 	<label>
-		<input type="radio" name="alert[schedule_id]" selected required id="optionsRadios1" value="<%= nil %>" style="margin-top:0;"> (for everyone)
+		<input type="radio" name="alert[schedule_id]" <%= 'checked="checked"' if @alert.schedule_id.nil? %> required id="optionsRadios1" value="<%= nil %>" style="margin-top:0;"> (for everyone)
 	</label>
 </div>
 
-<% Schedule.all.each do |schedule| %>
-<div class="radio">
-	<label>
-		<input type="radio" name="alert[schedule_id]" required id="optionsRadios1" value="<%= schedule.id %>" style="margin-top:0;"> <%= schedule.description || schedule.name %>
-	</label>
-</div>
-<% end %>
+<%= f.collection_radio_buttons(:schedule_id, Schedule.all, :id, :name) do |b|
+  content_tag(:div) { b.label { b.radio_button + " " + b.text } }
+end %>
 
 <div class="actions">
 	<%= f.submit class: 'btn' %>
