--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,19 +32,7 @@
 			
 			<div id="row-content" class="col-md-9 p-0">
 	
-				<% if flash[:alert] %>
-				<div class="alert alert-danger alert-dismissible fade show">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:alert] %>
-				</div>
-				<% end %>
-
-				<% if flash[:notice] %>
-				<div class="alert alert-success alert-dismissible fade show">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:notice] %>
-				</div>
-				<% end %>
+				<%= render "layouts/alerts" %>
 				
 				<% if @page and @submitted and date = @page.pset.submit_from(current_user).submitted_at %>
 				<div id="submitted_pset" class="alert alert-success">
