--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -33,19 +33,7 @@
 			</div>
 		</div>
 
-		<% if flash[:alert] %>
-		<div class="alert alert-danger alert-dismissible fade show">
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			<%= flash[:alert] %>
-		</div>
-		<% end %>
-
-		<% if flash[:notice] %>
-		<div class="alert alert-success alert-dismissible fade show">
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			<%= flash[:notice] %>
-		</div>
-		<% end %>
+		<%= render "layouts/alerts" %>
 	
 		<div class="container-fluid h-100" style="overflow-y:auto">
 			<div class="row content h-100" style="overflow-y:auto">
