--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -60,10 +60,10 @@
 	<div class="tab-content">
 		<% first = true %>
 		<% @submit.file_contents.each do |filename, contents| %>
-		<div class="tab-pane fade show <%= (first = false) || 'active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab"><%= CodeRay.scan(contents, File.extname(filename)[1..-1].to_sym).div.html_safe %></div>
+		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab"><%= CodeRay.scan(contents, File.extname(filename)[1..-1].to_sym).div.html_safe %></div>
 		<% end if @submit.file_contents.present? %>
 		<% if @submit.check_feedback.present? %>
-		<div class="tab-pane fade <%= (first = false) || 'active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.check_feedback_formatted %></code></pre></div>
+		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.check_feedback_formatted %></code></pre></div>
 		<% end %>
 	</div>
 	<% end %>
