--- a/app/views/review/index.html.erb
+++ b/app/views/review/index.html.erb
@@ -5,21 +5,24 @@
 		<th>Grade</th>
 	</tr>
 
-	<% @users.each do |user|%>
+	<% @data.each do |grader, grades| %>
+	<tr>
+		<th><%= grader.name if grader %></th>
+	</tr>
+	<% grades.group_by(&:user).each do |user,grades|%>
 	<tr>
 		<td>
 			<a href="#" class="" data-toggle="modal" data-target="#user-modal" data-user="<%= user.id %>"><%= user.name %></a>
 		</td>
 		
-		<% user.submits.each do |s| %>
+		<% grades.each do |s| %>
 		<td>
 			<%= s.pset_name %><br>
-			<% if s.grade %>
-			<%= link_to s.grade.any_final_grade, "#", data: { toggle: "modal", target: "#grade-modal", submit:s.grade.id }, class: "btn" %>
-			<% end %>
+			<%= link_to s.any_final_grade, "#", data: { toggle: "modal", target: "#grade-modal", submit:s.id }, class: "btn" %>
 		</td>
 		<% end %>
 	</tr>
+	<% end %>
 	<% end %>
 
 </table>
