--- a/app/views/ask/location.js.erb
+++ b/app/views/ask/location.js.erb
@@ -1,4 +1,4 @@
 $('#ama').html("<%= j(render 'location') %>");
-$('#ama-nav').dropdown('toggle');
+// $('#ama-nav').dropdown('toggle');
 $('#ama-nav').addClass('open');
 $('[data-toggle="tooltip"]').tooltip()
