--- a/app/views/ask/location.js.erb
+++ b/app/views/ask/location.js.erb
@@ -1,4 +1,3 @@
 $('#ama').html("<%= j(render 'location') %>");
-// $('#ama-nav').dropdown('toggle');
-$('#ama-nav').addClass('open');
+$('#ama-nav').toggleClass('show');$('#ama-menu').toggleClass('show');
 $('[data-toggle="tooltip"]').tooltip()
