--- a/app/views/ask/location.js.erb
+++ b/app/views/ask/location.js.erb
@@ -1,3 +1,5 @@
 $('#ama').html("<%= j(render 'location') %>");
+$(function() {
 $('#ama-dd').dropdown('toggle')
+})
 $('[data-toggle="tooltip"]').tooltip()
