--- a/app/views/ask/location.js.erb
+++ b/app/views/ask/location.js.erb
@@ -1,5 +1,3 @@
 $('#ama').html("<%= j(render 'location') %>");
-$(function() {
-$('#ama-dd').dropdown('toggle')
-})
-$('[data-toggle="tooltip"]').tooltip()
+$('#ama-dd').dropdown('toggle');
+$('[data-toggle="tooltip"]').tooltip();
