--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -2,7 +2,7 @@
 <%= render partial: "user_modal" %>
 <% end %>
 
-<ul id="icon-nav" class="nav navbar navbar-nav ml-auto">
+<ul id="icon-nav" class="navbar-nav ml-auto">
 	<% if current_user.senior? %>
 		<form class="form-inline ml-3 mr-3">
 			<div id="search" class="dropdown">
@@ -82,14 +82,14 @@
 	<% end %>
 </ul>
 
+<% if is_local_ip? && current_user.student? && current_user.last_known_location.blank? %>
+<script>
+	$.ajax('<%= ask_path %>');
+</script>
+<% else %>
 <script>
 	$('#ama-nav').one('show.bs.dropdown', function(e) {
 		$.ajax('<%= ask_path %>');
 	})
-</script>
-
-<% if is_local_ip? && current_user.student? && current_user.last_known_location.blank? %>
-<script>
-	$.ajax('<%= ask_path %>');
 </script>
 <% end %>
