--- a/app/views/grades/_show.html.erb
+++ b/app/views/grades/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex h-100 flex-column">
+<div class="d-flex flex-column" style="min-height:100%">
 
 	<div class="">
 		<span class="navbar-text">
