--- a/app/views/timeline/_staff.html.erb
+++ b/app/views/timeline/_staff.html.erb
@@ -38,9 +38,10 @@
 					<% @groups.each do |group| %>
 					<li class="list-group-item d-flex align-items-center">
 						<%= group.name %>
-						<span class="badge badge-primary ml-auto"><%= group.submits.includes(:grade).where(grades: { submit_id: nil }).count %> sub</span>
-						<span class="badge badge-primary ml-1"><%= group.grades.open.count %> grading</span>
-						<span class="badge badge-secondary ml-1"><%= link_to group.grades.finished.count.to_s + " done", reopen_grades_path(group.id), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %></span>
+						<span class="badge badge-primary ml-auto"><%= link_to "#{group.submits.includes(:grade).where(grades: { submit_id: nil }).count} sub", submits_path(group: group.id), class: 'text-light' %></span>
+						<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.open.count} gra", submits_path(group: group.id, status: Grade.statuses[:open]), class: 'text-light' %></span>
+						<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.finished.count} fin", submits_path(group: group.id, status: Grade.statuses[:finished]), class: 'text-light' %></span>
+						<span class="badge badge-secondary ml-1"><%= link_to group.grades.finished.count.to_s + " reo", reopen_grades_path(group.id), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %></span>
 					</li>
 					<% end %>
 				</ul>
@@ -50,11 +51,12 @@
 				To be published:
 				</div>
 				<ul class="list-group list-group-flush">
-					<% @psets.each do |pset_name, count| %>
+					<% @psets.each do |pset, count| %>
 					<li class="list-group-item d-flex align-items-center">
-						<%= pset_name %>
-						<span class="badge badge-primary ml-auto">
-							<%= link_to count.to_s + " done", publish_grades_path(pset:pset_name), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %>
+						<%= pset[1] %>
+						<span class="badge badge-primary ml-auto"><%= link_to "#{count} done", submits_path(pset: pset[0], status: Grade.statuses[:finished]), class: 'text-light' %></span>
+						<span class="badge badge-primary ml-1">
+							<%= link_to "publish", publish_grades_path(pset: pset[1]), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %>
 						</span>
 					</li>
 					<% end %>
