--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -1,3 +1,9 @@
+<% content_for :math do %>
+<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+<% end %>
+
+<%= timeline @chart_data %>
+
 <table class="table">
 	<tr>
 		<th>created</th>
