--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -2,7 +2,7 @@
 <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
 <% end %>
 
-<%= timeline @chart_data %>
+<%= timeline @chart_data, height: "500px" %>
 
 <table class="table">
 	<tr>
