--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -4,6 +4,8 @@
 
 <%= timeline @chart_data, height: "500px" %>
 
+<%= scatter_chart @week_data, xtitle:"Day", ytitle:"Hour" %>
+
 <table class="table">
 	<tr>
 		<th>created</th>
