--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -31,8 +31,9 @@
 	    options: {
 	      title: {
 	        display: true,
-	        text: 'Predicted world population (millions) in 2050'
-	      }, scales: {
+	        text: ''
+	      },
+		  scales: {
 	        yAxes: [{ 
 				ticks: {
 					max:20,
