--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -3,7 +3,9 @@
 		<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
 		<div class="d-flex flex-column justify-content-center">
 		<span class="course-name"><%= Settings["course"]["name"] %></span>
+		<% if Schedule.count != 1 %>
 		<small><%= @group_name || @schedule_name %></small>
+		<% end %>
 		</div>
 	</a>
 </div>
