--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -3,9 +3,9 @@
 		<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
 		<div class="d-flex flex-column justify-content-center">
 		<span class="course-name"><%= Settings["course"] && Settings["course"]["name"] %></span>
-		<% if Schedule.count != 1 %>
+		<% if @group_name || @schedule_name %>
 		<small><%= @group_name || @schedule_name %></small>
 		<% end %>
-		</div>
+	</div>
 	</a>
 </div>
