--- a/app/views/timeline/_staff.html.erb
+++ b/app/views/timeline/_staff.html.erb
@@ -8,6 +8,10 @@
 		</div>
 	</div>
 	<% end %>
+	
+	<% if current_user.head? %>
+	<%= render 'timeline/psets_to_publish' %>
+	<% end %>
 
 	<% if current_user.admin? %>
 	
@@ -46,22 +50,7 @@
 					<% end %>
 				</ul>
 				<% end %>
-				<% if @psets.present? %>
-				<div class="card-body">
-				To be published:
-				</div>
-				<ul class="list-group list-group-flush">
-					<% @psets.each do |pset, count| %>
-					<li class="list-group-item d-flex align-items-center">
-						<%= pset[1] %>
-						<span class="badge badge-primary ml-auto"><%= link_to "#{count} done", submits_path(pset: pset[0], status: Grade.statuses[:finished]), class: 'text-light' %></span>
-						<span class="badge badge-primary ml-1">
-							<%= link_to "publish", publish_grades_path(pset: pset[1]), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %>
-						</span>
-					</li>
-					<% end %>
-				</ul>
-				<% end %>
+				<%= render 'timeline/psets_to_publish' %>
 			</div>
 			
 			<% if @new_students.present? %>
