--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :navbar_items do %>
 <% end %>
 
-<div class="col-2 px-0 py-0" style="background-color:#F9FCFF; overflow-y:scroll; min-height:0;">
+<div class="col-2 px-0 py-0" style="background-color:#F9FCFF; overflow-y:scroll; min-height:0; max-height:100%">
 	<ul class="nav flex-column">
 		<%= button_to 'Mark as finished', finish_submits_path, class: 'btn m-3', data: { confirm:'Are you sure? All items that are correctly filled-in will be marked as "finished". You will not be able to edit those.' } %>
 		<% @to_grade.each do |submit| %>
@@ -12,7 +12,7 @@
 	</ul>
 </div>
 
-<div class="col-3 pt-2" style="background-color:white; overflow-y:scroll; min-height:0; box-shadow:gray 2px 0px 5px inset ">
+<div class="col-3 pt-2" style="background-color:white; overflow-y:scroll; min-height:0; box-shadow:#cccccc 2px 0px 5px inset; max-height:100% ">
 	
 	<% if @grade.open? %>
 	<%= render partial: "grades/form" %>
@@ -41,7 +41,7 @@
 	<% end %>
 </div>
 
-<div class="col-7" style="overflow-y:scroll; min-height:0; box-shadow:gray 2px 0px 5px inset">
+<div class="col-7" style="overflow-y:scroll; min-height:0; box-shadow:#cccccc 2px 0px 5px inset;max-height:100%">
 	
 	<% if @submit.file_contents.present? || @submit.check_feedback.present? %>
 	<ul class="nav nav-tabs" id="files" role="tablist">
