--- a/app/views/grades/_show.html.erb
+++ b/app/views/grades/_show.html.erb
@@ -4,6 +4,7 @@
 		<span class="navbar-text">
 			<%= @pset.name %> <%= t(:by) %> <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %>
 			<span class="badge badge-dark"><%= @grade.status %></span><br>
+			Submitted at <%= @submit.submitted_at %><br>
 			Grading by <%= @grade.grader_name %>
 		</span>
 		
