--- a/app/views/config/_settings.html.erb
+++ b/app/views/config/_settings.html.erb
@@ -6,9 +6,20 @@
 <%= form_for(:settings, url: config_settings_path(), remote: true, html: { id: "enable_hands_form" }) do |form| %>
 	<div class="form-group">
 		<div class="form-check">
-			<%= form.check_box :hands_allow, { remote: true, checked: Settings.hands_allow, id: "gridCheck2", class: "form-check-input", onclick: "$('#enable_hands_form').trigger('submit.rails');" } %>
-			<label class="form-check-label" for="gridCheck2">
+			<%= form.check_box :hands_allow, { remote: true, checked: Settings.hands_allow, id: "enable_hands_form_check", class: "form-check-input", onclick: "$('#enable_hands_form').trigger('submit.rails');" } %>
+			<label class="form-check-label" for="enable_hands_form_check">
 				Enable student question queue
+			</label>
+		</div>
+	</div>
+<% end %>
+
+<%= form_for(:settings, url: config_settings_path(), remote: true, html: { id: "enable_hands_bumper" }) do |form| %>
+	<div class="form-group">
+		<div class="form-check">
+			<%= form.check_box :hands_bumper, { remote: true, checked: Settings.hands_bumper, id: "enable_hands_bumper_check", class: "form-check-input", onclick: "$('#enable_hands_bumper').trigger('submit.rails');" } %>
+			<label class="form-check-label" for="enable_hands_bumper_check">
+				Force location when local
 			</label>
 		</div>
 	</div>
