--- a/app/views/ask/location.html.erb
+++ b/app/views/ask/location.html.erb
@@ -32,9 +32,10 @@
 	    <area target="" alt="A1.20" title="A1.20" href="#" onClick="setloc(this);" coords="333,16,270,110" shape="rect">
 	    <area target="" alt="A1.22" title="A1.22" href="#" onClick="setloc(this);" coords="337,16,401,109" shape="rect">
 	    <area target="" alt="A1.30" title="A1.30" href="#" onClick="setloc(this);" coords="581,3,689,109" shape="rect">
-	    <area target="" alt="Tafel 1" title="CT" href="#" onClick="setloc(this);"  coords="124,154,8" shape="circle">
-	    <area target="" alt="Tafel 2" title="BT" href="#" onClick="setloc(this);"  coords="285,181,6" shape="circle">
-	    <area target="" alt="Tafel 3" title="DT" href="#" onClick="setloc(this);"  coords="123,197,6" shape="circle">
+	    <area target="" alt="AT" title="AT" href="#" onClick="setloc(this);"  coords="266,118,8" shape="circle">
+	    <area target="" alt="CT" title="CT" href="#" onClick="setloc(this);"  coords="124,154,8" shape="circle">
+	    <area target="" alt="BT" title="BT" href="#" onClick="setloc(this);"  coords="285,181,6" shape="circle">
+	    <area target="" alt="DT" title="DT" href="#" onClick="setloc(this);"  coords="123,197,6" shape="circle">
 	    <area target="" alt="B1" title="B1" href="#" onClick="setloc(this);"       coords="157,152,171,148,174,155,160,161" shape="poly">
 	    <area target="" alt="B2" title="B2" href="#" onClick="setloc(this);"       coords="172,147,176,155,189,149,185,140" shape="poly">
 	    <area target="" alt="B3" title="B3" href="#" onClick="setloc(this);"       coords="190,149,202,144,199,135,187,139" shape="poly">
@@ -63,9 +64,9 @@
 	    <area target="" alt="D10" title="D10" href="#" onClick="setloc(this);"     coords="350,189,344,181,367,170,368,180" shape="poly">
 	    <area target="" alt="D11" title="D11" href="#" onClick="setloc(this);"     coords="370,181,395,180,395,170,368,170" shape="poly">
 	    <area target="" alt="D12" title="D12" href="#" onClick="setloc(this);"     coords="396,180,417,179,417,170,395,170" shape="poly">
-	    <area target="" alt="Tafel 5d" title="F1" href="#" onClick="setloc(this);" coords="373,138,397,153" shape="rect">
-	    <area target="" alt="Tafel 5v" title="F2" href="#" onClick="setloc(this);" coords="397,137,418,153" shape="rect">
-	    <area target="" alt="Tafel 4" title="E" href="#" onClick="setloc(this);"   coords="282,111,298,130" shape="rect">
+	    <area target="" alt="F1" title="F1" href="#" onClick="setloc(this);" coords="373,138,397,153" shape="rect">
+	    <area target="" alt="F2" title="F2" href="#" onClick="setloc(this);" coords="397,137,418,153" shape="rect">
+		<area target="" alt="E" title="E" href="#" onClick="setloc(this);" coords="342,111,359,130" shape="rect">
 	</map>
 	<%= form_tag(ask_set_location_path, method: :post, class: 'form-insline' ) do %>
 		<input type="hidden" id="lochid" name="location">
