--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -3,10 +3,12 @@
 	<%= grade.pset.name %> <%= t(:was_graded) %><br>
 </h5>
 <p id="grade_buttons">
+	<% if Settings.grading['grades'][grade.pset.name]['subgrades'] %>
 	<% Settings.grading['grades'][grade.pset.name]['subgrades'].each_pair do |subgrade_name, unin| %>
 	<% k=subgrade_name %>
 	<% v=grade.subgrades[k] %>
 	<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge badge-secondary"><%= v %></span></span>
+	<% end %>
 	<% end %>
 	<% unless Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
 	<span class="btn btn-sm btn-outline-primary"> Grade <span class="badge badge-primary"><%= translate_grade(grade.any_final_grade) %></span></span>
