--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -10,7 +10,7 @@
 	<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge badge-secondary"><%= v %></span></span>
 	<% end %>
 	<% end %>
-	<% unless Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
+	<% if Settings.grading['grades'][grade.pset.name] && !Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
 	<span class="btn btn-sm btn-outline-primary"> Grade <span class="badge badge-primary"><%= translate_grade(grade.any_final_grade) %></span></span>
 	<% end%>
 </p>
