--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -51,7 +51,7 @@
 			<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename %></a>
 		</li>
 		<% end if @submit.file_contents.present? %>
-		<% if @submit.check_feedback.present? %>
+		<% if @submit.has_feedback? %>
 		<li class="nav-item">
 			<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-check" role="tab">check</a>
 		</li>
@@ -62,7 +62,7 @@
 		<% @submit.file_contents.each do |filename, contents| %>
 		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">		<%= link_to 'd', { action: :download, submit_id: @submit.id, filename: filename }, class: 'pull-right' %><%= CodeRay.scan(contents, CodeRay::FileType.fetch(filename, :text)).div(:line_numbers => :inline).html_safe %></div>
 		<% end if @submit.file_contents.present? %>
-		<% if @submit.check_feedback.present? %>
+		<% if @submit.has_feedback? %>
 		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.check_feedback_formatted %></code></pre></div>
 		<% end %>
 	</div>
