--- a/app/views/timeline/_submit.html.erb
+++ b/app/views/timeline/_submit.html.erb
@@ -14,7 +14,7 @@ URL: <%= link_to submit.url, submit.url %>
 	</ul>
 </p>
 <% end %>
-<% if submit.check_feedback.present? %>
+<% if submit.has_feedback? %>
 <%= link_to "Check feedback", profile_feedback_path(submit), class:"btn btn-secondary", data: { toggle:'modal', target:'#fb-modal', submit: submit.id } %>
 <% end %>
 
