--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -4,7 +4,7 @@
 
 <ul id="icon-nav" class="navbar-nav ml-auto">
 	<% if current_user.senior? %>
-		<form class="form-inline ml-3 mr-3">
+		<form class="form-inline mr-3">
 			<div id="search" class="dropdown">
 				<input id="dropdown-control" type="hidden" data-toggle="dropdown">
 				<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
