--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div class="container-fluid" style="">
 		<div class="row" style="">
 			
-			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column navbar-dark">
+			<div id="sidebar" class="col-md-3 p-md-4 navbar navbar-dark">
 				<%= render 'layouts/brand'%>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
 				</div>
 				<% end %>
 
-				<div class="pull-right pt-3 navbar navbar-expand">
+				<div class="float-md-right pt-md-3 navbar navbar-expand">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
