allow hierarchical links in schedule

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -71,8 +71,8 @@
 }
 
 #sidebar a.nav-link.disabled {
-    font-style:italic;
-    color: #a5a5a5;
+    font-weight:600;
+    color: #c0c1c2;
 }
 
 #sidebar h2
