--- a/app/views/profile/schedule.js.erb
+++ b/app/views/profile/schedule.js.erb
@@ -1,2 +1,2 @@
 $('#schedule_name').html("<%= @current_schedule.name %>");
-$('#schedule').html("<%= j(render 'schedule') %>");
+$('#schedule').html("<%= escape_javascript links_to_ul(@current_schedule.content) %>");
